# 11y6

./: .gitignore  README.md  db.sqlite3  package.json  pyproject.toml
Proyecto11y6/: .gitignore  db.sqlite3  manage.py  my.cnf  package.json  pyproject.toml  requirements.txt
Proyecto11y6/accounts/: forms.py  models.py  urls.py  views.py
Proyecto11y6/accounts/migrations/: 0001_initial.py
Proyecto11y6/base/: settings.py  urls.py  views.py
Proyecto11y6/base/templates/: ayuda.html  index.html
Proyecto11y6/compra/: forms.py  models.py  urls.py  views.py
Proyecto11y6/compra/migrations/: 0001_initial.py  0002_alter_compra_id_detalle_compra.py  0002_alter_compra_options_evento_id_compra.py  0003_alter_detalle_compra_options_and_more.py
Proyecto11y6/inventario/: forms.py  models.py  urls.py  views.py
Proyecto11y6/inventario/migrations/: 0001_initial.py  0002_rename_nombremarca_marca_marca_and_more.py  0003_consumotrabajador_presentacion_unidadmedida_and_more.py  0004_rename_marca_marca_nombre.py  0005_alter_marca_estado_alter_presentacion_estado_and_more.py  0005_rename_consumotrabajador_consumo_trabajador_and_more.py  0006_consumotrabajador_trabajador.py
Proyecto11y6/static/css/: style.css
Proyecto11y6/static/js/: javascript.js
Proyecto11y6/usuario/: admin.py  forms.py  models.py  urls.py  views.py
Proyecto11y6/usuario/migrations/: 0001_initial.py  0002_alter_persona_documento.py  0003_alter_turno_fecha_ingreso_alter_turno_fecha_salida.py  0005_trabajador_turno.py  (+2 more)
Proyecto11y6/venta/: forms.py  models.py  urls.py  views.py
accounts/: forms.py  urls.py  (+1 more)
(+156 files in other folders)
