[tool.poetry]
name = "proyecto11y6"
version = "0.1.0"
description = ""
authors = ["william00936 <wsamado0@soy.sena.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-dump-load-utf8 = "^0.0.4"
django = "^4.2.4"
django-bootstrap5 = "^23.3"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-bootstrap-icons = "^0.8.3"
django-dump-die = "^0.1.5"
django-safedelete = "^1.3.2"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
